@@ -69,7 +69,47 @@ public class Xref extends TextContainer implements StructuralElement
     
     /** Special rendering instructions for this link */
     private String rend;
+    
+    /** The link's name */
+    private String name;
 
+    /**
+     * Construct a new xref link.
+     * 
+     * @param context
+     *            (Required) The context this element is contained in
+     * @param target
+     *            (Required) A target URL for the references a destination for
+     *            the xref.
+     * @param rend
+     *            (May be null) A special rendering instruction for this xref.
+     * @param name
+     *            (May be null) a local identifier used to differentiate the
+     *            element from its siblings.
+     */
+    protected Xref(WingContext context, String target, String rend, String name) throws WingException
+    {
+        super(context);
+        
+        // Instead of validating the target field for null values we'll just assume that the caller 
+        // meant to have a "/" but didn't quite handle this case. Ideal no one should call this 
+        // method with a null value but sometimes it happens. What we are seeing is that it is 
+        // common for developers to just call it using something like <ContextPath + "/link">. 
+        // However in the case where the caller just wants a link back to DSpace home they just pass
+        // <ContextPath>, in cases where we are installed at the root of the servlet's url path this
+        // is null. To correct for this common mistake we'll just change all null values to a plain 
+        // old "/", assuming they meant the root.
+        
+        //require(target, "The 'target' parameter is required for all xrefs.");
+        
+        if (target == null)
+        	target = "/";
+        
+        this.target = target;
+        this.rend = rend;
+        this.name = name;
+    }
+    
     /**
      * Construct a new xref link.
      * 
@@ -83,24 +123,7 @@ public class Xref extends TextContainer implements StructuralElement
      */
     protected Xref(WingContext context, String target, String rend) throws WingException
     {
-        super(context);
-        
-        // Instead of validating the target field for null values we'll just assume that the calle 
-        // ment to have a "/" but didn't quite handle this case. Ideal no one should call this 
-        // method with a null value but sometimes it happens. What we are seing is that it is 
-        // common for developers to just call it using something like <ContextPath + "/link">. 
-        // However in the case where the calle just wants a link back to DSpace home they just pass
-        // <ContextPath>, in cases where we are installed at the root of the servlet's url path this
-        // is null. To correct for this common mistake we'll just change all null values to a plain 
-        // old "/", assuming they ment the root.
-        
-        //require(target, "The 'target' parameter is required for all xrefs.");
-        
-        if (target == null)
-        	target = "/";
-        
-        this.target = target;
-        this.rend = rend;
+        this(context, target, rend, null);
     }
     
     /**
@@ -114,7 +137,7 @@ public class Xref extends TextContainer implements StructuralElement
      */
     protected Xref(WingContext context, String target) throws WingException
     {
-    	this(context,target,null);
+    	this(context, target, null, null);
     }
 
     /**
@@ -131,13 +154,18 @@ public class Xref extends TextContainer implements StructuralElement
      *            (Required) SAX Helper class to keep track of namespaces able
      *            to determine the correct prefix for a given namespace URI.
      */
-
     public void toSAX(ContentHandler contentHandler, LexicalHandler lexicalHandler, 
             NamespaceSupport namespaces) throws SAXException
     {
         AttributeMap attributes = new AttributeMap();
         attributes.put(A_TARGET, target);
            
+        if (name != null)
+        {
+            attributes.put(A_NAME, name);
+            attributes.put(A_ID, context.generateID(E_XREF, name));
+        }
+        
         if(this.rend!=null){
         	attributes.put(A_RENDER, this.rend);
         }
